--- a/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -48,7 +48,7 @@
           font = "16pt sans-serif"
           position = "bottom"
         ></kendo-chart-title>
-        <kendo-chart-area background="#d1c3c3"></kendo-chart-area>
+        <kendo-chart-area background="rgb(230 255 255)"></kendo-chart-area>
         <kendo-chart-legend position="top"></kendo-chart-legend>
         <kendo-chart-tooltip>
           <ng-template kendoChartSeriesTooltipTemplate let-value="value">
@@ -74,7 +74,7 @@
             font="16pt sans-serif"
             position="bottom"
           ></kendo-chart-title>
-          <kendo-chart-area background="#d1c3c3"></kendo-chart-area>
+          <kendo-chart-area background="rgb(230 255 255)"></kendo-chart-area>
           <kendo-chart-tooltip>
             <ng-template kendoChartSeriesTooltipTemplate let-value="value">
               count : {{ value }}
