--- a/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
@@ -4,20 +4,20 @@
       <div class="row centre-text">
         <div class="col-3">
           <div class="buttonMarj">
-            <button type="submit" class="btn btn-success" (click)="assignAsset()">
+            <button type="submit" class="btn btn-success border border-secondary shadow rounded" (click)="assignAsset()">
               <i class="bi bi-pc-display"> Assign asset</i>
             </button>
-            <button type="reset" class="btn btn-secondary" (click)="unSelectReadio()">
+            <button type="reset" class="btn btn-secondary border border-secondary shadow rounded" (click)="unSelectReadio()">
               <i class="bi bi-bootstrap-reboot"></i>
             </button>
           </div>
         </div>
         <div class="col">
-          <label for="search">Search</label>
+          <label for="search"></label>
           <input
             id="search"
             type="text"
-            class="form-control"
+            class="form-control shadow rounded"
             [(ngModel)]="searchText"
             placeholder="   🔍Start searching......"
           />
@@ -27,7 +27,7 @@
           <button
             [routerLink]="['/dashboard']"
             routerLinkActive="router-link-active"
-            class="btn btn-warning"
+            class="btn btn-warning border border-warning shadow rounded"
           >
             <i class="bi bi-arrow-return-left"></i>
           </button>
@@ -113,7 +113,7 @@
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
-              item.expiryDate | date : "MM-dd-yyyy"
+              item.expiryDate | date : "yyyy-MM-dd"
             }}</label>
           </td>
           <td>
