--- a/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
@@ -12,7 +12,7 @@
         <button
           [routerLink]="['/dashboard/assets']"
           routerLinkActive="router-link-active"
-          class="btn btn-warning"
+          class="btn btn-warning border border-warning shadow rounded"
         >
         <i class="bi bi-arrow-return-left"></i>
         </button>
@@ -203,7 +203,7 @@
       <div class="centre-text mb-3" *ngIf="!updateflag">
         <input
           type="submit"
-          class="btn btn-primary"
+          class="btn btn-primary border border-secondary shadow rounded"
           value="Submit"
           [disabled]="assetForm.invalid"
         />
@@ -211,7 +211,7 @@
       <div class="centre-text mb-3" *ngIf="updateflag">
           <input
             type="submit"
-            class="btn btn-success"
+            class="btn btn-success border border-secondary shadow rounded"
             value="Update"
             [disabled]="assetForm.invalid"
           />
