--- a/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
@@ -12,7 +12,7 @@
         <button
           [routerLink]="['/dashboard/show-venders']"
           routerLinkActive="router-link-active"
-          class="btn btn-warning"
+          class="btn btn-warning border border-warning shadow rounded"
         >
         <i class="bi bi-arrow-return-left"></i>
         </button>
@@ -121,7 +121,7 @@
       <div class="centre-text mb-3" *ngIf="updateflag">
         <input
           type="submit"
-          class="btn btn-primary"
+          class="btn btn-primary border border-secondary shadow rounded"
           value="Submit"
           [disabled]="vendorForm.invalid"
         />
@@ -130,7 +130,7 @@
       <div class="centre-text mb-3" *ngIf="!updateflag">
         <input
           type="submit"
-          class="btn btn-success"
+          class="btn btn-success border border-secondary shadow rounded"
           value="Update"
           [disabled]="vendorForm.invalid"
         />
