--- a/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -27,7 +27,7 @@
           <div class="card text-white bg-danger mb-3">
             <div class="card-body">
               <h5 class="card-title">Assigned Assets <i class="bi bi-laptop-fill"></i></h5>
-              <p class="card-text" [routerLink]="['/dashboard/submit-asset']">{{totalAssets-unassignedAssets}}</p>
+              <p class="card-text" [routerLink]="['/dashboard/submit-asset']">{{assignedAssets}}</p>
             </div>
           </div>
         </div>
